--- a/src/main/resources/org/uet/library_management/hello-view.fxml
+++ b/src/main/resources/org/uet/library_management/hello-view.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.uet.library_management.ui.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.BorderPane?>
 
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="org.uet.library_management.ui.HelloController"
+            prefHeight="400.0" prefWidth="600.0">
     <Label fx:id="welcomeText"/>
+    <Label>Hello</Label>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+</BorderPane>
