--- a/src/main/resources/org/uet/library_management/hello-view.fxml
+++ b/src/main/resources/org/uet/library_management/hello-view.fxml
@@ -7,8 +7,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.HelloController"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="org.uet.library_management.ui.HelloController">
     <Label fx:id="welcomeText"/>
     <Label>Hello</Label>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
