--- a/src/main/resources/org/uet/library_management/home.fxml
+++ b/src/main/resources/org/uet/library_management/home.fxml
@@ -5,7 +5,6 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.HomeController"
-            prefHeight="400.0" prefWidth="600.0">
-    <Label>Home</Label>
+            fx:controller="org.uet.library_management.ui.HomeController">
+    <Label>Trang chủ</Label>
 </BorderPane>
