--- a/src/main/resources/org/uet/library_management/main.fxml
+++ b/src/main/resources/org/uet/library_management/main.fxml
@@ -4,12 +4,11 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.MainController"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="org.uet.library_management.ui.MainController">
     <left>
         <fx:include source="menu.fxml" />
     </left>
     <center>
-        <BorderPane fx:id="contentPane" />
+        <BorderPane styleClass="content-pane" fx:id="contentPane" />
     </center>
 </BorderPane>
