--- a/src/main/resources/org/uet/library_management/menu.fxml
+++ b/src/main/resources/org/uet/library_management/menu.fxml
@@ -3,10 +3,22 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <VBox xmlns="http://javafx.com/javafx"
-          xmlns:fx="http://javafx.com/fxml"
-          fx:controller="org.uet.library_management.ui.MenuController"
-          prefHeight="400.0" prefWidth="600.0">
-    <Button onAction="#handleLibraryMenu" text="Library" />
-    <Button onAction="#handleHomeMenu" text="Home" />
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="org.uet.library_management.ui.MenuController"
+      alignment="TOP_CENTER"
+      styleClass="left-sider">
+    <TextField styleClass="search-button" text="Tìm kiếm"/>
+    <Label styleClass="menu-label" text="Sách" />
+    <Button styleClass="menu-button" onAction="#handleHomeMenu" text="Trang chủ" />
+    <Button styleClass="menu-button" onAction="#handleLibraryMenu" text="Book Store" />
+    <Label styleClass="menu-label" text="Thư viện" />
+    <Button styleClass="menu-button" onAction="#handleGetAllMenu" text="Tất cả" />
+    <Button styleClass="menu-button" onAction="#handleBookmarkMenu" text="Muốn đọc" />
+    <Button styleClass="menu-button" onAction="#handleFinishedMenu" text="Đã đọc xong" />
+    <Button styleClass="menu-button" onAction="#handleBooksMenu" text="Sách" />
+    <Label styleClass="menu-label" text="Bộ sưu tập của tôi" />
+    <Button styleClass="menu-button" onAction="#handleHomeMenu" text="My Books" />
 </VBox>
