--- a/src/main/resources/org/uet/library_management/home.fxml
+++ b/src/main/resources/org/uet/library_management/home.fxml
@@ -6,5 +6,10 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.HomeController">
-    <Label>Trang chủ</Label>
+    <center>
+        <Label>Trang chủ</Label>
+        <Label fx:id="welcomeText"/>
+        <Label>Hello</Label>
+        <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    </center>
 </BorderPane>
