--- a/src/main/resources/org/uet/library_management/bookmark.fxml
+++ b/src/main/resources/org/uet/library_management/bookmark.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.BookmarkController">
-    <Label fx:id="welcomeText"/>
-    <Label>Hello</Label>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <top>
+        <Label styleClass="head-label" text="Muốn đọc" />
+    </top>
+    <center>
+        <VBox alignment="CENTER" spacing="10">
+            <Label text="Không có sách" />
+            <Label text="Để thêm vào bộ sưu tập này, hãy bấm vào bất kỳ sách nào trong giá sách và chọn Muốn đọc" />
+        </VBox>
+    </center>
 </BorderPane>
