--- a/src/main/resources/org/uet/library_management/getAll.fxml
+++ b/src/main/resources/org/uet/library_management/getAll.fxml
@@ -5,9 +5,9 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.HomeController">
+            fx:controller="org.uet.library_management.ui.GetAllController">
     <top>
-        <Label styleClass="head-label" text="Trang chủ" />
+        <Label styleClass="head-label" text="Tất cả" />
     </top>
     <center>
         <VBox />
