change a little bit of the menu part2

--- a/src/main/resources/org/uet/library_management/menu.fxml
+++ b/src/main/resources/org/uet/library_management/menu.fxml
@@ -23,7 +23,7 @@
                 </ImageView>
             </graphic>
         </Button>
-        <Button styleClass="menu-button" onAction="#handleLibraryMenu" text="Giá sách" />
+        <Button styleClass="menu-button" onAction="#handleBookShelfMenu" text="Giá sách" />
         <Label styleClass="menu-label" text="Thư viện" />
         <Button fx:id="getAllButton" styleClass="menu-button" onAction="#handleGetAllMenu" text="Tất cả">
             <graphic>
