--- a/src/main/resources/org/uet/library_management/home.fxml
+++ b/src/main/resources/org/uet/library_management/home.fxml
@@ -6,10 +6,11 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.HomeController">
+
     <top>
         <Label styleClass="head-label" text="Trang chủ" />
     </top>
     <center>
-        <VBox />
+        <FlowPane fx:id="gridViewPane" styleClass="grid-view" />
     </center>
 </BorderPane>
