--- a/src/main/resources/org/uet/library_management/home.fxml
+++ b/src/main/resources/org/uet/library_management/home.fxml
@@ -6,11 +6,10 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.HomeController">
-
     <top>
         <Label styleClass="head-label" text="Trang chủ" />
     </top>
     <center>
-        <FlowPane fx:id="gridViewPane" styleClass="grid-view" />
+        <FlowPane fx:id="flowPane" styleClass="flow-pane" />
     </center>
 </BorderPane>
