--- a/src/main/resources/org/uet/library_management/ui/auth/login.fxml
+++ b/src/main/resources/org/uet/library_management/ui/auth/login.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<BorderPane xmlns="http://javafx.com/javafx"
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.auth.LoginController"
-            styleClass="login">
-    <center>
-        <Label>Login</Label>
-    </center>
-</BorderPane>
+            styleClass="auth">
+    <AnchorPane layoutX="100.0" layoutY="65.0" styleClass="auth-pane">
+        <Label fx:id="titleLabel" styleClass="title-label" layoutX="214.0" layoutY="14.0" text="Library Management" />
+        <TextField fx:id="emailField" layoutX="359.0" layoutY="241.0" promptText="Email" />
+        <PasswordField fx:id="passwordField" layoutX="359.0" layoutY="279.0" promptText="Password" />
+        <Button fx:id="loginButton" styleClass="login-button" onAction="#handleLoginButton" layoutX="461.0" layoutY="314.0" mnemonicParsing="false" text="Log In" />
+    </AnchorPane>
+</AnchorPane>
