--- a/src/main/resources/org/uet/library_management/ui/auth/register.fxml
+++ b/src/main/resources/org/uet/library_management/ui/auth/register.fxml
@@ -6,14 +6,29 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Button?>
+<?import java.lang.String?>
+<?import javafx.scene.control.ChoiceBox?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.auth.RegisterController"
             styleClass="auth">
     <AnchorPane layoutX="100.0" layoutY="65.0" styleClass="auth-pane">
-        <Label fx:id="titleLabel" styleClass="title-label" layoutX="214.0" layoutY="14.0" text="Library Management" />
-        <TextField fx:id="emailField" layoutX="359.0" layoutY="241.0" promptText="Email" />
-        <PasswordField fx:id="passwordField" layoutX="359.0" layoutY="279.0" promptText="Password" />
+        <Label fx:id="titleLabel" styleClass="title-label" layoutX="14.0" layoutY="14.0" text="Library Management" />
+        <TextField fx:id="nameField" layoutX="359.0" layoutY="41.0" promptText="Name" />
+        <TextField fx:id="phoneNumberField" layoutX="359.0" layoutY="81.0" promptText="Phone number" />
+        <TextField fx:id="emailField" layoutX="359.0" layoutY="121.0" promptText="Email" />
+        <TextField fx:id="addressField" layoutX="359.0" layoutY="161.0" promptText="Address" />
+        <ChoiceBox fx:id="membershipStatusBox" layoutX="359.0" layoutY="201.0">
+            <String fx:value="Option 1"/>
+            <String fx:value="Option 2"/>
+            <String fx:value="Option 3"/>
+        </ChoiceBox>
+        <ChoiceBox fx:id="privilegesBox" layoutX="359.0" layoutY="241.0">
+            <String fx:value="Option 3"/>
+            <String fx:value="Option 4"/>
+            <String fx:value="Option 5"/>
+        </ChoiceBox>
+        <PasswordField fx:id="passewordField" layoutX="359.0" layoutY="279.0" promptText="Password" />
         <Button fx:id="registerButton" styleClass="register-button" onAction="#handleRegisterButton" layoutX="461.0" layoutY="314.0" mnemonicParsing="false" text="Register" />
     </AnchorPane>
 </AnchorPane>
