--- a/src/main/resources/org/uet/library_management/ui/search/search.fxml
+++ b/src/main/resources/org/uet/library_management/ui/search/search.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.Label?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.SearchController"
+            fx:controller="org.uet.library_management.ui.search.SearchController"
             prefHeight="400.0" prefWidth="600.0">
     <top>
         <Label text="Xu hướng" />
