--- a/src/main/resources/org/uet/library_management/ui/search/suggestSearch.fxml
+++ b/src/main/resources/org/uet/library_management/ui/search/suggestSearch.fxml
@@ -5,10 +5,10 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.SuggestSearchController"
+            fx:controller="org.uet.library_management.ui.search.SuggestSearchController"
             prefHeight="400.0" prefWidth="600.0">
     <top>
-        <Label text="Đang hiển thị gợi ý liên quan đến " />
+        <Label fx:id="onSearchLabel" text="Đang hiển thị gợi ý liên quan đến " />
     </top>
     <center>
         <VBox />
