--- a/src/main/resources/org/uet/library_management/ui/main.fxml
+++ b/src/main/resources/org/uet/library_management/ui/main.fxml
@@ -9,6 +9,6 @@
         <fx:include source="menu.fxml" />
     </left>
     <center>
-        <BorderPane styleClass="content-pane" fx:id="contentPane" />
+        <BorderPane fx:id="contentPane" />
     </center>
 </BorderPane>
