--- a/src/main/resources/org/uet/library_management/ui/search/search.fxml
+++ b/src/main/resources/org/uet/library_management/ui/search/search.fxml
@@ -6,9 +6,10 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.search.SearchController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="600.0"
+            styleClass="content-pane">
     <top>
-        <Label text="Xu hướng" />
+        <Label styleClass="on-search-label" text="Xu hướng" />
     </top>
     <center>
         <HBox>
