--- a/src/main/resources/org/uet/library_management/styles/style.css
+++ b/src/main/resources/org/uet/library_management/styles/style.css
@@ -16,15 +16,17 @@
     -fx-background-color: #ffffff;
     -fx-pref-width: 800;
     -fx-pref-height: 530;
-    -fx-padding: 40 40 40 40;
+    /*-fx-padding: 40 40 40 40;*/
 }
 
 .head-label {
     -fx-font-weight: BOLD;
     -fx-font-size: 32px;
+    -fx-padding: 40 0 0 40;
 }
 
 .flow-pane {
     -fx-hgap: 25;
     -fx-vgap: 40;
+    -fx-padding: 0 0 0 40;
 }
