--- a/src/main/resources/org/uet/library_management/ui/finished.fxml
+++ b/src/main/resources/org/uet/library_management/ui/finished.fxml
@@ -5,9 +5,13 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.FinishedController">
+            fx:controller="org.uet.library_management.ui.FinishedController"
+            styleClass="content-pane">
     <top>
-        <Label styleClass="head-label" text="Hoàn thành" />
+        <VBox>
+            <Label styleClass="head-label" text="Hoàn thành" />
+            <Separator styleClass="separator" />
+        </VBox>
     </top>
     <center>
         <FlowPane fx:id="flowPane" styleClass="flow-pane" />
