update scrollPane ui

--- a/src/main/resources/org/uet/library_management/ui/home.fxml
+++ b/src/main/resources/org/uet/library_management/ui/home.fxml
@@ -14,7 +14,7 @@
         </VBox>
     </top>
     <center>
-        <ScrollPane fx:id="scrollpane" >
+        <ScrollPane fx:id="scrollpane" styleClass="scroll-pane">
             <FlowPane fx:id="flowPane" styleClass="flow-pane" />
         </ScrollPane>
     </center>
