--- a/src/main/resources/org/uet/library_management/styles/style.css
+++ b/src/main/resources/org/uet/library_management/styles/style.css
@@ -1,16 +1,18 @@
 .scroll-pane {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
     -fx-hbar-policy: NEVER;  /* Hide horizontal scrollbar */
     -fx-vbar-policy: AS_NEEDED;  /* Hide vertical scrollbar */
 }
 
-.scroll-pane .scroll-bar:vertical {
-    -fx-background-color: #dbdbda;
-}
+/*.scroll-pane .scroll-bar:vertical {*/
+/*    -fx-background-color: #dbdbda;*/
+/*}*/
 
-.scroll-pane .scroll-bar:vertical .thumb {
-    -fx-background-color: #b4b4b4; /* Color of the scrollbar thumb (the draggable part) */
-    -fx-pref-width: 8px;
-}
+/*.scroll-pane .scroll-bar:vertical .thumb {*/
+/*    -fx-background-color: #b4b4b4; !* Color of the scrollbar thumb (the draggable part) *!*/
+/*    -fx-pref-width: 8px;*/
+/*}*/
 
 .content-pane {
     -fx-background-color: #ffffff;
@@ -26,6 +28,7 @@
 }
 
 .flow-pane {
+    -fx-background-color: #ffffff;
     -fx-hgap: 25;
     -fx-vgap: 40;
     -fx-padding: 0 0 0 40;
