--- a/src/main/resources/org/uet/library_management/ui/getAll.fxml
+++ b/src/main/resources/org/uet/library_management/ui/getAll.fxml
@@ -14,6 +14,8 @@
         </VBox>
     </top>
     <center>
-        <FlowPane fx:id="flowPane" styleClass="flow-pane" />
+        <ScrollPane fx:id="scrollpane" styleClass="scroll-pane">
+            <FlowPane fx:id="flowPane" styleClass="flow-pane" />
+        </ScrollPane>
     </center>
 </BorderPane>
