--- a/src/main/resources/org/uet/library_management/styles/search.css
+++ b/src/main/resources/org/uet/library_management/styles/search.css
@@ -8,19 +8,28 @@
     -fx-font-weight: BOLD;
 }
 
-.suggestions-pane {
-    -fx-pref-height: 270;
-}
-
 .suggestions-label {
     -fx-padding: 35 0 0 40;
     -fx-font-size: 16px;
     -fx-font-weight: BOLD;
 }
 
+.suggestions-vbox {
+    -fx-background-color: #ececec;
+    -fx-pref-width: 800;
+    -fx-pref-height: 200;
+
+    -fx-padding: 0 0 0 40;
+}
+
 .in-your-library-label {
     -fx-background-color: #ececec;
+    -fx-pref-width: 800;
     -fx-pref-height: 200;
+
+    -fx-padding: 10 0 0 40;
+    -fx-font-size: 16px;
+    -fx-font-weight: BOLD;
 }
 
 .top-results-label {
