--- a/src/main/resources/org/uet/library_management/styles/style.css
+++ b/src/main/resources/org/uet/library_management/styles/style.css
@@ -27,6 +27,10 @@
     -fx-padding: 40 0 0 40;
 }
 
+.vbox {
+    -fx-background-color: #ffffff;
+}
+
 .flow-pane {
     -fx-background-color: #ffffff;
     -fx-hgap: 25;
