--- a/src/main/resources/org/uet/library_management/styles/style.css
+++ b/src/main/resources/org/uet/library_management/styles/style.css
@@ -1,8 +1,15 @@
-.scroll-pane {
+.vertical-scroll-pane {
     -fx-background-color: transparent;
     -fx-border-color: transparent;
     -fx-hbar-policy: NEVER;  /* Hide horizontal scrollbar */
     -fx-vbar-policy: AS_NEEDED;  /* Hide vertical scrollbar */
+}
+
+.horizontal-scroll-pane {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-hbar-policy: AS_NEEDED;  /* Hide horizontal scrollbar */
+    -fx-vbar-policy: NEVER;  /* Hide vertical scrollbar */
 }
 
 /*.scroll-pane .scroll-bar:vertical {*/
