--- a/src/main/resources/org/uet/library_management/ui/getAll.fxml
+++ b/src/main/resources/org/uet/library_management/ui/getAll.fxml
@@ -14,7 +14,7 @@
         </VBox>
     </top>
     <center>
-        <ScrollPane fx:id="scrollpane" styleClass="scroll-pane" fitToWidth="true" pannable="true">
+        <ScrollPane fx:id="verticalScrollpane" styleClass="vertical-scroll-pane" fitToWidth="true" pannable="true">
             <content>
                 <FlowPane fx:id="flowPane" styleClass="flow-pane" />
             </content>
