--- a/src/main/resources/org/uet/library_management/styles/style.css
+++ b/src/main/resources/org/uet/library_management/styles/style.css
@@ -36,6 +36,10 @@
 
 .vbox {
     -fx-background-color: #ffffff;
+}
+
+.vbox-padding {
+    -fx-background-color: #ffffff;
     /*-fx-hgap: 25;*/
     /*-fx-vgap: 40;*/
     -fx-padding: 0 0 0 40;
